--- a/ProjetMercadonaBack/src/main/resources/application.properties
+++ b/ProjetMercadonaBack/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:8456/promotion
 spring.datasource.username=postgres
 spring.datasource.password=camillesite
 
+# Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
