--- a/ProjetMercadonaBack/src/main/resources/application.properties
+++ b/ProjetMercadonaBack/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+
+# 50MB autorise une taille d'image au maximum de 200Ko pour environ 150 produits (avec marge de sécurité).
+server.max-http-request-header-size=50MB
+
+
