--- a/ProjetMercadonaFront/package.json
+++ b/ProjetMercadonaFront/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite --port=3000",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "axios": "^1.1.2",
@@ -20,6 +21,7 @@
     "@vitejs/plugin-vue": "^3.1.0",
     "autoprefixer": "^10.4.12",
     "cypress": "^13.2.0",
+    "jest": "^29.7.0",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.1.8",
     "vite": "^3.1.0"
