--- a/ProjetMercadonaFront/package.json
+++ b/ProjetMercadonaFront/package.json
@@ -1,29 +1,38 @@
 {
   "name": "projet-mercadona",
-  "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "private": true,
   "scripts": {
-    "dev": "vite --port=3000",
     "build": "vite build",
-    "preview": "vite preview",
-    "test": "jest"
+    "test:unit": "vue-cli-service test:unit",
+    "test:e2e": "vue-cli-service test:e2e",
+    "lint": "vue-cli-service lint",
+    "dev": "vite --port=3000"
   },
   "dependencies": {
     "axios": "^1.1.2",
     "bootstrap": "^5.3.1",
+    "core-js": "^3.8.3",
     "vue": "^3.2.37",
+    "vue-json-viewer": "^3.0.4",
     "vue-router": "^4.1.5",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
-    "@vitejs/plugin-vue": "^3.1.0",
+    "@testing-library/vue": "^7.0.0",
+    "@types/jest": "^29.5.5",
+    "@vitejs/plugin-vue": "^3.2.0",
+    "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-service": "^5.0.8",
+    "@vue/test-utils": "^2.4.1",
     "autoprefixer": "^10.4.12",
     "cypress": "^13.2.0",
     "jest": "^29.7.0",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.1.8",
-    "vite": "^3.1.0"
-  }
+    "vite": "^3.1.0",
+    "vitest": "^0.34.6"
+  },
+  "type": "module"
 }
