--- a/ProjetMercadonaFront/package.json
+++ b/ProjetMercadonaFront/package.json
@@ -17,6 +17,7 @@
     "vue": "^3.2.37",
     "vue-json-viewer": "^3.0.4",
     "vue-router": "^4.1.5",
+    "vue3-datepicker": "^0.4.0",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
