--- a/ProjetMercadonaBack/pom.xml
+++ b/ProjetMercadonaBack/pom.xml
@@ -78,6 +78,11 @@
 			<version>4.0.1</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.junit.platform</groupId>
+			<artifactId>junit-platform-engine</artifactId>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 
