--- a/ProjetMercadonaBack/pom.xml
+++ b/ProjetMercadonaBack/pom.xml
@@ -83,6 +83,11 @@
 			<artifactId>junit-platform-engine</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.junit.platform</groupId>
+			<artifactId>junit-platform-suite-engine</artifactId>
+			<version>1.8.1</version>
+		</dependency>
 
 	</dependencies>
 
